--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -79,6 +79,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:text="REPORTAR UBICACION"
+        android:onClick="reportarUbicacion"
         app:layout_constraintEnd_toStartOf="@+id/textView22"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button14" />
