--- a/app/src/main/res/layout/activity_carga_peligrosa_main.xml
+++ b/app/src/main/res/layout/activity_carga_peligrosa_main.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CARGA PELIGOSA"
+        android:text="CARGA PELIGROSA"
         android:textSize="30sp"
         android:layout_marginBottom="30dp"
         android:textAlignment="center"
