--- a/app/src/main/res/layout/activity_dueno_de_carga_main.xml
+++ b/app/src/main/res/layout/activity_dueno_de_carga_main.xml
@@ -53,6 +53,7 @@
         android:layout_height="91dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:onClick="onSendMaps1"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
