--- a/app/src/main/res/layout/activity_propietario_camion.xml
+++ b/app/src/main/res/layout/activity_propietario_camion.xml
@@ -49,6 +49,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="36dp"
+        android:onClick="onSendMaps1"
         android:layout_marginRight="36dp"
         android:text="Consultar Ultima Ubicacion Del Camion"
         app:layout_constraintEnd_toStartOf="@+id/textView10"
