--- a/app/src/main/res/layout/activity_propietario_camion.xml
+++ b/app/src/main/res/layout/activity_propietario_camion.xml
@@ -66,6 +66,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="42dp"
+        android:onClick="solicitud"
         android:layout_marginRight="42dp"
         android:text="Consultar Solicitudes De Carga"
         app:layout_constraintEnd_toStartOf="@+id/textView11"
